Move index.js to static directory and update script reference in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,6 @@
       window.env_id_from_server = "{{ env_id }}";
     </script>
     {% endif %}
-    <script src="/templates/index.js" defer></script>
+    <script src="/static/index.js" defer></script>
 </body>
 </html>
