--- a/templates/client.html
+++ b/templates/client.html
@@ -11,6 +11,17 @@
     <label for="email-box">Enter your email to retrieve your data later:</label><br>
     <input type="email" id="email-box" placeholder="your@email.com" style="font-size:1.1em;width:80%;margin-top:0.5em;">
     <span id="email-status" style="margin-left:1em;color:#007700;"></span>
+    <hr>
+    <div id="client-info" style="margin-top:1.5em;">
+      <h2>Known Data</h2>
+      <ul>
+        <li><b>env-id:</b> <span id="info-env-id"></span></li>
+        <li><b>client public IP:</b> <span id="info-client-ip"></span></li>
+        <li><b>server public IP:</b> <span id="info-server-ip"></span></li>
+        <li><b>client_id (256-bit):</b> <span id="info-client-id"></span></li>
+        <li><b>email:</b> <span id="info-email"></span></li>
+      </ul>
+    </div>
     <script>
       window.CLIENT_ID_VALUE = "{{ client_id }}";
     </script>
