Add client table functionality with localStorage backup and restore support

--- a/templates/join.html
+++ b/templates/join.html
@@ -12,6 +12,12 @@
         <canvas id="qr-code"></canvas>
     </div>
     <p id="qr-url"></p>
+    <hr>
+    <div id="client-table-section">
+      <h2>Current In-Memory Client Table</h2>
+      <pre id="client-table-json" style="background:#f4f4f4;padding:1em;overflow-x:auto;"></pre>
+      <table id="client-table-html" border="1" style="margin-top:1em;width:100%;border-collapse:collapse;"></table>
+    </div>
     <script src="/static/join.js" defer></script>
 </body>
 </html>
