Add functionality to delete all client rows and update recovery table rendering

--- a/templates/client.html
+++ b/templates/client.html
@@ -10,6 +10,7 @@
     <p id="client-id-value" style="font-size:1.5em;word-break:break-all;"></p>
     <label for="email-box">Enter your email to retrieve your data later:</label><br>
     <input type="email" id="email-box" placeholder="your@email.com" style="font-size:1.1em;width:80%;margin-top:0.5em;">
+    <button id="save-email-btn" style="margin-left:1em;">Save</button>
     <span id="email-status" style="margin-left:1em;color:#007700;"></span>
     <hr>
     <div id="client-info" style="margin-top:1.5em;">
