--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,7 @@
         <b>Explore:</b> <a href="/chat">Try the collaborative chat demo</a> | <a href="/join">Join a session</a> | <a href="/recovery">Recovery/Admin</a></p>
         <div id="readme-content"><span class="readme-loading">Loading project README...</span></div>
     </div>
+    {% include '_footer.html' %}
     <script src="/static/index.js" defer></script>
 </body>
 </html>
