Refactor client table update mechanism: replace SSE with Socket.IO for real-time updates and clean up related code.

--- a/templates/join.html
+++ b/templates/join.html
@@ -17,6 +17,7 @@
     <div id="client-table-section">
       <table id="client-table-html" border="1" style="margin-top:1em;width:100%;border-collapse:collapse;"></table>
     </div>
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" crossorigin="anonymous"></script>
     <script src="/static/join.js" defer></script>
     {% include '_footer.html' %}
 </body>
